--- a/CinemaOnline/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
+++ b/CinemaOnline/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
@@ -398,7 +398,7 @@
 
                                     <!--Menu list item-->
                                     <li id="menu-Dashboard">
-                                        <a href="/">
+                                        <a href="/Admin">
                                             <i class="ion-home"></i>
                                             <span class="menu-title">Trang chủ</span>
                                         </a>
