--- a/CinemaOnline/Views/Home/E404.cshtml
+++ b/CinemaOnline/Views/Home/E404.cshtml
@@ -10,14 +10,15 @@
     <!-- Basic Page Needs -->
     <meta charset="utf-8">
     <title>AMovie - 404</title>
-    <meta name="description" content="zFrames team">
-    <meta name="keywords" content="zFrames team">
-    <meta name="author" content="zFrames team">
+    <meta name="description" content="
+          s team">
+    <meta name="keywords" content="MeetFlix team">
+    <meta name="author" content="MeetFlix team">
 
     <!-- Mobile Specific Metas-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta content="telephone=no" name="format-detection">
-    <link rel="shortcut icon" href="~/Content/images/film.ico" />
+    <link rel="shortcut icon" href="~/Content/images/m-icon.png" />
 
     <!-- Fonts -->
     <!-- Font awesome - icon font -->
