--- a/CinemaOnline/Views/Shared/_Layout.cshtml
+++ b/CinemaOnline/Views/Shared/_Layout.cshtml
@@ -4,9 +4,9 @@
     <!-- Basic Page Needs -->
     <meta charset="utf-8">
     <title>MeetFlix - @(ViewBag.Title ?? "Trang chủ")</title>
-    <meta name="description" content="zFrame Team">
+    <meta name="description" content="MeetFlix Team">
     <meta name="keywords" content="HTML, CSS, JavaScript">
-    <meta name="author" content="zFrame">
+    <meta name="author" content="MeetFlix">
 
     <link rel="shortcut icon" href="~/Content/images/m-icon.png" />
 
@@ -36,8 +36,6 @@
     <!-- Custom -->
     <!-- Custom -->
     <link href="/Content/css/style3860.css?v=1" rel="stylesheet" />
-    <link rel="stylesheet" href="~/Content/css/footer.css" />
-    <link rel="stylesheet" href="~/Content/css/header.css" />
 
     <!-- Modernizr -->
     <script src="~/Scripts/js/external/modernizr.custom.js"></script>
@@ -59,7 +57,7 @@
     @RenderSection("CSS", required: false)
     <style>
         .ajs-message {
-            color: white !important;
+            color: black !important;
         }
     </style>
 </head>
