--- a/CinemaOnline/Areas/Admin/Views/BookTicket/Index.cshtml
+++ b/CinemaOnline/Areas/Admin/Views/BookTicket/Index.cshtml
@@ -39,9 +39,9 @@
                         <th class="text-center">STT</th>
                         <th class="text-center">Mã</th>
                         <th class="text-center">Tên phim</th>
-                        <th class="text-center">Giá</th>
+                        <th class="text-center">Giá vé</th>
                         <th class="text-center">Số lượng</th>
-                        <th class="text-center">Người đặt</th>
+                        <th class="text-center">Người đặt vé</th>
                         <th class="text-center">Actions</th>
                     </tr>
                 </thead>
