--- a/CinemaOnline/Areas/Admin/Views/Dashboard/Index.cshtml
+++ b/CinemaOnline/Areas/Admin/Views/Dashboard/Index.cshtml
@@ -24,7 +24,7 @@
 <!-- CONTENT -->
 <!--===================================================-->
 <div class="text-center cls-content">
-    <p class="h4 text-uppercase text-bold">Có lỗi sảy ra!</p>
+    <p class="h4 text-uppercase text-bold">Có lỗi  đã xảy ra!</p>
     <div class="pad-btm">
         @(ViewBag.Message ?? "Lỗi chưa xác định")
 
