--- a/CinemaOnline/Areas/Admin/Views/SeatType/Index.cshtml
+++ b/CinemaOnline/Areas/Admin/Views/SeatType/Index.cshtml
@@ -28,7 +28,7 @@
                     <tr>
                         <th class="text-center">STT</th>
                         <th class="text-center">Tên loại ghế</th>
-                        <th class="text-center">Giá( VNĐ)</th>
+                        <th class="text-center">Giá(VNĐ)</th>
                         <th class="text-center">Màu sắc</th>
                         <th class="text-center">Actions</th>
                     </tr>
@@ -149,7 +149,7 @@
                 container: 'tooltip',
                 validators: {
                     notEmpty: {
-                        message: 'Tên tiếng việt là cần thiết và không để trống!'
+                        message: 'Tên tiếng việt là cần thiết và không được để trống!'
                     }
                 }
             },
