--- a/CinemaOnline/Areas/Admin/Views/Statistic/Index.cshtml
+++ b/CinemaOnline/Areas/Admin/Views/Statistic/Index.cshtml
@@ -20,7 +20,7 @@
                 <div class="panel-control">
                     <input type="number" placeholder="Textbox" value="@currentYear" id="year" class="form-control">
                 </div>
-                <h3 class="panel-title">Số lượng vé bán theo tháng</h3>
+                <h3 class="panel-title">Số lượng vé bán theo mỗi tháng</h3>
             </div>
             <div class="pad-all">
                 <div id="demo-morris-area-legend" class="text-center"></div>
