--- a/CinemaOnline/Areas/Admin/Views/TimeFrame/Index.cshtml
+++ b/CinemaOnline/Areas/Admin/Views/TimeFrame/Index.cshtml
@@ -26,7 +26,7 @@
                 <thead>
                     <tr>
                         <th class="text-center">STT</th>
-                        <th class="text-center">Khung giờ</th>
+                        <th class="text-center">Khung giờ chiếu</th>
                         <th class="text-center">Giá cộng thêm</th>
                         <th class="text-center">Actions</th>
                     </tr>
@@ -64,7 +64,7 @@
                 <div class="modal-body">
                     <input type="hidden" name="isEdit" value="false" />
                     <div class="form-group">
-                        <label class="col-lg-3 control-label">Khung giờ</label>
+                        <label class="col-lg-3 control-label">Khung giờ chiếu</label>
                         <div class="col-lg-7">
                             <input type="time" class="form-control" name="Time" id="txtTimeAdd" placeholder="" required>
                         </div>
